# TicTac

linera-tic-tac-toe/: Cargo.toml  DEPLOYMENT_GUIDE.md  PROJECT_REVIEW.md  README.md
linera-tic-tac-toe/src/: contract.rs  lib.rs  service.rs  state.rs
linera-tic-tac-toe/web/: index.html  package-lock.json  package.json  vite.config.ts
linera-tic-tac-toe/web/src/: App.css  App.tsx  index.css  lineraClient.ts
